# bmminer-cgminer492

./: .gitignore  Makefile.am  README  api-example.c  api.c  build.md  cgminer.c  configure.ac  driver-btm-c5.c  driver-btm-c5.h  hexdump.c  logging.c  logging.h  miner.h  sha2.c  usbutils.c  usbutils.h  uthash.h  util.c  util.h
binaries/: bmminer  cgminer-api
downgrade-script/: Readme.md  restoreConfig.md5  restoreConfig.sh
update-script/: restoreConfig.sh
